# CLI-Mail

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cli_mail/: __init__.py  __main__.py  app.py  auth.py  client.py  config.py  models.py  parser.py  sender.py  ui.py
src/cli_mail/commands/: account.py  actions.py  compose.py  folders.py  inbox.py  read.py  registry.py  search.py
tests/: test_account_commands.py  test_config.py  test_logout.py  test_models.py  test_parser.py  test_registry.py  test_sender.py
